added some new ASN.1 parsing functionality as well as RSA private key object prototype

--- a/ppazdan/Makefile
+++ b/ppazdan/Makefile
@@ -1,11 +1,16 @@
 SRC_DIR=src
 SRCS=$(wildcard $(SRC_DIR)/*.cpp)
 TARGET=out/poc
+DEBUG_TARGET=out/poc-debug
 CXX=g++
 CXXFLAGS=-g
+LIBS=-lgmp -lgmpxx
 
 all:
-	$(CXX) $(CXXFLAGS) $(SRCS) -o $(TARGET)
+	$(CXX) $(CXXFLAGS) $(SRCS) $(LIBS) -o $(TARGET)
+
+debug:
+	$(CXX) $(CXXFLAGS) $(SRCS) $(LIBS) -g -o $(DEBUG_TARGET)
 
 clean:
 	rm -f $(TARGET)
